--- a/gestionReservas/gestionReservas.csproj
+++ b/gestionReservas/gestionReservas.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
@@ -26,5 +26,12 @@
         <DependentUpon>GeneralMessage.axaml</DependentUpon>
         <SubType>Code</SubType>
       </Compile>
+      <Compile Update="UI\VisualizacionFactura.axaml.cs">
+        <DependentUpon>VisualizacionFactura.axaml</DependentUpon>
+        <SubType>Code</SubType>
+      </Compile>
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="facturas" />
     </ItemGroup>
 </Project>
